plugins {
    id 'application'
}

group 'org.example'
version '0.1-SNAPSHOT'

repositories {
    mavenCentral()
    maven { url "https://hyperledger.jfrog.io/hyperledger/besu-maven" }
    maven { url "https://artifacts.consensys.net/public/maven/maven/" }
    maven { url "https://splunk.jfrog.io/splunk/ext-releases-local" }
    maven { url "https://dl.cloudsmith.io/public/consensys/quorum-mainnet-launcher/maven/"}
}

description("BEsu LAterna commandline interrogation tool")

apply plugin: 'java'
sourceCompatibility = 17
targetCompatibility = 17

dependencies {
    def besuVersion = '+'
    implementation group:'org.hyperledger.besu.internal', name: 'api',  version:   besuVersion
    implementation group:'org.hyperledger.besu.internal', name: 'besu',  version:   besuVersion
    implementation group:'org.hyperledger.besu.internal', name: 'config',  version:   besuVersion
    implementation group:'org.hyperledger.besu.internal', name: 'clique',  version:   besuVersion
    implementation group:'org.hyperledger.besu.internal', name: 'core',  version:   besuVersion
    implementation group:'org.hyperledger.besu.internal', name: 'crypto',  version:   besuVersion
    implementation group:'org.hyperledger.besu.internal', name: 'plugins-rocksdb',  version:   besuVersion
    implementation group:'org.hyperledger.besu.internal', name: 'metrics-core',  version:   besuVersion
    implementation group:'org.hyperledger.besu.internal', name: 'trie',  version:   besuVersion
    implementation group:'org.hyperledger.besu.internal', name: 'p2p',  version:   besuVersion
    implementation group:'org.hyperledger.besu.internal', name: 'eth',  version:   besuVersion
    implementation group:'org.hyperledger.besu', name: 'besu-datatypes',  version:   besuVersion
    implementation group:'org.hyperledger.besu.internal', name: 'rlp',  version:   besuVersion
    implementation group:'org.hyperledger.besu.internal', name: 'common',  version:   besuVersion
    implementation group:'org.hyperledger.besu.internal', name: 'kvstore',  version:   besuVersion
    implementation group:'org.hyperledger.besu.internal', name: 'qbft',  version:   besuVersion
    implementation group:'org.hyperledger.besu.internal', name: 'ibft',  version:   besuVersion
    implementation group:'org.hyperledger.besu', name: 'evm',  version: besuVersion


    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2.2'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.13.2'
    implementation 'com.googlecode.lanterna:lanterna:3.1.1'
    implementation 'io.vertx:vertx-core:4.2.7'
    implementation group: 'org.rocksdb', name: 'rocksdbjni', version: '6.29.5'

    implementation 'org.apache.tuweni:tuweni-rlp:2.2.0'


    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.36'
    implementation 'kr.pe.kwonnam.slf4j-lambda:slf4j-lambda-core:0.1'
    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.11'


}

configurations.all {
    exclude group: 'net.consensys.services', module: ':quorum-mainnet-launcher'
    exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl'
}

application {
    mainClass = "org.hyperledger.bela.Bela"
}

test {
    useJUnitPlatform()
}